--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
     <artifactId>ingresso</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
+    
+    <developers>
+    <developer>
+    <name>John Doe</name>
+    <email>jdoe@example.com</email>
+    </developer>
+    </developers>
 
 
     <properties>
